--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "botbuilder": "^4.0.6",
+        "botbuilder-ai": "^4.1.6",
         "botframework-config": "^4.0.6",
         "dotenv": "^6.0.0",
         "restify": "^6.3.4"
