--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "RecipeBot",
+    "name": "recipe-bot",
     "version": "1.0.0",
     "description": "Demonstrate the core capabilties of the Microsoft Bot Framework",
     "author": "Microsoft Bot Builder Yeoman Generator v4.0.10",
@@ -12,6 +12,7 @@
         "watch": "nodemon ./index.js"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "botbuilder": "^4.0.6",
         "botbuilder-ai": "^4.1.6",
         "botbuilder-dialogs": "^4.1.6",
